--- a/src/container/crib.hbs
+++ b/src/container/crib.hbs
@@ -1,33 +1,103 @@
-<main class="m-5">
-    <div class="card mb-5">
-        <div class="card-body">
-            <div class="row">
-            </div>
-        </div>
+<main class='m-5'>
+  <div class='card mb-5'>
+    <div class='card-body'>
+      <div class='row'>
+      </div>
     </div>
-    
-    <div class="mt-5">
-        <div class="row">
-            <div class="col-4">
-                <div class="d-grid gap-1">
-                    <div><a href="https://drive.google.com/file/d/1oOrAY7yD9SKWiX2uBwXlIkGIQbvj4Flg/view"> <button class="btn btn-primary btn-block col-12" >Текст, кнопки та блоки</button></a></div>
-                    <div><a href="https://drive.google.com/file/d/1RbMjxnry8nXooIh7I3JnEfUixv_bOZaD/view"> <button class="btn btn-primary btn-block col-12" >Карточки, таблиці та колонки</button></a></div>
-                    <div><a href="https://drive.google.com/file/d/1LgLsMyUH79pkAFqd4cDr8TUPVsyL7UBL/view"> <button class="btn btn-primary btn-block col-12" >Навігація, значки та повідомлення</button></a></div>
-                    <div><a href="https://drive.google.com/file/d/1AZTo1O3cdVK2cNNVPQzcEpyWiDeFRFpG/view"> <button class="btn btn-primary btn-block col-12" >Компоненти форми</button></a></div>
-                    <div><a href="https://drive.google.com/file/d/1x8mxuIP-asCWH8KUxvZAJjoHTDHLWRHU/view"> <button class="btn btn-primary btn-block col-12" >Іконки</button></a></div>
-                    <div><a href="https://drive.google.com/file/d/1q5HPxEPNur69NQ5jtfiSgFcnT_iqpWOt/view"> <button class="btn btn-primary btn-block col-12" >Селектори. 1 частина</button></a></div>
-                    <div><a href="https://drive.google.com/file/d/16gEOpkU2T_DeHiw-fgbP185znNeffGmv/view"> <button class="btn btn-primary btn-block col-12" >Селектори. 2 частина</button></a></div>
-                    <div><a href="https://drive.google.com/file/d/1DWFAtuGYZ7SmZDs5qU1qoK0ZtNKm6gqh/view"> <button class="btn btn-primary btn-block col-12" >Селектори. 3 частина</button></a></div>
-                    <div><a href="https://drive.google.com/file/d/16lr5toyITtFghaF7KApu6_PzKg3dZlQ9/view"> <button class="btn btn-primary btn-block col-12" >Селектори. 4 частина</button></a></div>
-                    <div><a href="https://drive.google.com/file/d/1LMMquTMu1-nnqpO3L4Z64IAl-Dot5_2A/view"> <button class="btn btn-primary btn-block col-12" >Відображення тексту</button></a></div>
-                    <div><a href="https://getbootstrap.com/"> <button class="btn btn-primary btn-block col-12" >Создавайте быстрые, адаптивные сайты с помощью Bootstrap</button></a></div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="d-grid gap-1">
-                    <div><a href="/work"> <button class="btn btn-primary btn-block col-12" >Work</button></a></div>
-                </div>
-            </div>
+  </div>
+
+  <div class='mt-5'>
+    <div class='row'>
+      <div class='col-4'>
+        <div class='d-grid gap-1'>
+          <div><a
+              href='https://drive.google.com/file/d/1oOrAY7yD9SKWiX2uBwXlIkGIQbvj4Flg/view'
+            >
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Текст, кнопки та блоки</button></a></div>
+          <div><a
+              href='https://drive.google.com/file/d/1RbMjxnry8nXooIh7I3JnEfUixv_bOZaD/view'
+            >
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Карточки, таблиці та колонки</button></a></div>
+          <div><a
+              href='https://drive.google.com/file/d/1LgLsMyUH79pkAFqd4cDr8TUPVsyL7UBL/view'
+            >
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Навігація, значки та повідомлення</button></a></div>
+          <div><a
+              href='https://drive.google.com/file/d/1AZTo1O3cdVK2cNNVPQzcEpyWiDeFRFpG/view'
+            >
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Компоненти форми</button></a></div>
+          <div><a
+              href='https://drive.google.com/file/d/1x8mxuIP-asCWH8KUxvZAJjoHTDHLWRHU/view'
+            >
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Іконки</button></a></div>
+          <div><a
+              href='https://drive.google.com/file/d/1q5HPxEPNur69NQ5jtfiSgFcnT_iqpWOt/view'
+            >
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Селектори. 1 частина</button></a></div>
+          <div><a
+              href='https://drive.google.com/file/d/16gEOpkU2T_DeHiw-fgbP185znNeffGmv/view'
+            >
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Селектори. 2 частина</button></a></div>
+          <div><a
+              href='https://drive.google.com/file/d/1DWFAtuGYZ7SmZDs5qU1qoK0ZtNKm6gqh/view'
+            >
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Селектори. 3 частина</button></a></div>
+          <div><a
+              href='https://drive.google.com/file/d/16lr5toyITtFghaF7KApu6_PzKg3dZlQ9/view'
+            >
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Селектори. 4 частина</button></a></div>
+          <div><a
+              href='https://drive.google.com/file/d/1LMMquTMu1-nnqpO3L4Z64IAl-Dot5_2A/view'
+            >
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Відображення тексту</button></a></div>
+          <div><a
+              href='https://drive.google.com/file/d/1F8UCYQ30iOLfE1Y9BsvomKViVdYGhmo8/view'
+            >
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Відображення шрифту</button></a></div>
+          <div><a
+              href='https://drive.google.com/file/d/14RHlgqYd7gW7aCfJgEFZcbwiDjh9j4vS/view'
+            >
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Словник сучасних та продвинутих CSS
+                властивостей для робити з текстом та шрифтом</button></a></div>
+          <div><a href='https://getbootstrap.com/'>
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Создавайте быстрые, адаптивные сайты с
+                помощью Bootstrap</button></a></div>
         </div>
+      </div>
+      <div class='col-4'>
+        <div class='d-grid gap-1'>
+          <div><a href='/work'>
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Work</button></a></div>
+        </div>
+      </div>
     </div>
+  </div>
 </main>
