--- a/public/css/selector.css
+++ b/public/css/selector.css
@@ -46,3 +46,16 @@ span {
 
   font-style: italic;
 }
+
+.test {
+  display: none;
+}
+
+.block {
+  display: block;
+  color: white;
+  background: black;
+  margin: auto;
+
+  width: 155px;
+}
