--- a/src/container/crib.hbs
+++ b/src/container/crib.hbs
@@ -83,6 +83,12 @@
                 class='btn btn-primary btn-block col-12'
               >Словник сучасних та продвинутих CSS
                 властивостей для робити з текстом та шрифтом</button></a></div>
+          <div><a
+              href='https://drive.google.com/file/d/1s-I7B5Uk-ozKXyY49EyacIZp5YGZqP7H/view'
+            >
+              <button
+                class='btn btn-primary btn-block col-12'
+              >Відображення блоків</button></a></div>
           <div><a href='https://getbootstrap.com/'>
               <button
                 class='btn btn-primary btn-block col-12'
