--- a/src/container/selector.hbs
+++ b/src/container/selector.hbs
@@ -6,13 +6,33 @@
     <p id='text'>
       Hello world!
     </p>
-    <p id='text'>
+    <p hidden id='text'>
       Hello world!
     </p>
-    <span class='test'>Text</span>
+    <span hidden class='test'>Text</span>
   </div>
 
   <pre>
     dfsd
   </pre>
+
+  <div>Block</div>
+  <div>Block</div>
+  <div>Block</div>
+  <div>Block</div>
+
+  <div
+    style='margin: 50px 0 50px 100px; backgraund: black;'
+  >
+
+    <span>Inline</span>
+    <span>Inline</span>
+    <span>Inline</span>
+
+    <span class='block'>Inline-block</span>
+
+  </div>
+
+  <div>Block</div>
+
 </main>
