--- a/src/container/selector.hbs
+++ b/src/container/selector.hbs
@@ -22,7 +22,7 @@
   <div>Block</div>
 
   <div
-    style='margin: 50px 0 50px 100px; backgraund: black;'
+    style='padding: 50px 0 50px 100px; backgraund: black; height: 200px:'
   >
 
     <span>Inline</span>
